# domowik

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/api/models/: __init__.py  dto.py
app/api/routes/: __init__.py  data_process.py
app/config/: __init__.py  app.py  data.py  http.py
app/services/: __init__.py
app/services/data/: redis.py
app/services/di/: __init__.py  config.py  data.py  web.py
app/services/queues/: __init__.py  arq_service.py
app/services/web/: rest_client.py
